# petrel-rag-v5

./: .dockerignore  .env.example  .env.ollama.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_local.py  Презентация-Petrel-RAG-v5.pptx
app/: __init__.py  api.py  auth.py  bm25_index.py  config.py  evaluation_runner.py  ingestion.py  llm.py  main.py  metrics.py  prompts.py  rag_engine.py  sparse_tei.py  ui.py  utils.py
docs/: AUTH.md  MONITORING.md  OFFLINE_SECURITY_CHECKLIST.md  index.html  qdrant_schema.md
evaluation/: README.md
monitoring/: prometheus.yml
monitoring/grafana/: dashboard.json  dashboards-provider.yaml
samples/: it_security_policy.txt  reglament_demalys_kk.txt  reglament_otpuska.txt
scripts/: audit_telemetry.sh  calibrate_threshold.py  preload_models.sh  run_evaluation.sh
tests/: README.md  test_ab.py  test_auth.py  test_bm25.py  test_ingest.py  test_lang.py  test_metrics.py  test_rag.py  testset.json
